# R3D2-A-Generalist-Hanabi-Agent

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
cpp/: r2d2_actor.cc  utils.cc
hanabi-learning-environment/: game_example.py
hanabi-learning-environment/hanabi_lib/: CMakeLists.txt  hanabi_game.cc  hanabi_state.cc  hanabi_state.h  util.cc  util.h
pyhanabi/: create.py  eval.py  eval_model.py  eval_model_diff.py  launch_jobs.sh  launch_multi_program.sh  mtl_r2d2_main.py  ppo.sh  ppo_main.py  q_net.py  r2d2.py  r2d2_main.py  r3d2_main.py  submit_job.sh  submit_transfer_job.sh  utils.py
pyhanabi/action_tokens/: 2p_action_ids.json  3p_action_ids.json  4p_action_ids.json  5p_action_ids.json
pyhanabi/common_utils/: multi_counter.py  saver.py
pyhanabi/configs/: drrn_bert.yaml  drrn_mtl.yaml  iql.yaml  iql_bert.yaml  iql_text.yaml  ppo.yaml  r2d2_text.yaml  r3d2-multitask.yaml  r3d2.yaml
pyhanabi/scripts/: find_ckpts.sh  launch_2p_eval_diff_setting_all_1.sh  launch_2p_eval_diff_setting_ckpts.sh  launch_3p_eval_diff_setting_all.sh  launch_4p_eval_diff_setting_all.sh  launch_5p_eval_diff_setting_all.sh  launch_all_training_evals.sh  launch_cross_play.sh  launch_eval_diff_setting.sh  launch_eval_diff_setting_all.sh  launch_eval_model.sh  launch_inter_setting_eval.sh  launch_multi_program.sh  launch_obl.sh  launch_resumable_jobs.sh  submit_job.sh  submit_r3d2.sh  submit_transfer_job.sh
pyhanabi/tools/: cross_play.py  eval_model.py
rela/: concurrent_queue.h  prioritized_replay.h  pybind.cc  replay.h
